--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 PORT=4000
-FRONTEND_URL=http://localhost:5173
+FRONTEND_URL=http://tickets.gulfafricanexus.com
 
 MONGODB_URI=mongodb+srv://gaindb:gaindb123@cluster0.xtaby0w.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 
@@ -8,6 +8,5 @@ RESEND_API_KEY=re_6fnxrh1i_CC7MLPZupdWqoTN6dCSurjgk
 
 RESEND_SENDER_EMAIL=no-reply@tickets.gulfafricanexus.com
 
-JWT_SECRET=super_long_random_secret
 ADMIN_EMAIL=contact@gulfafricanexus.com
-BCRYPT_SALT_ROUNDS=10
+
